# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.21

  - WL#13008, DevAPI: Add schema validation to create collection.

Version 8.0.20

  - Fix for Bug#30805426, IN CASE OF ISAUTHMETHODSWITCHREQUESTPACKET , TOSERVERS > 1 ARE IGNORED.

  - Fix for Bug#97714 (30570249), Contribution: Expose elapsed time for query interceptor to avoid hacky thread local implementations.
    Thanks to Matti Sillanpää and Johnathan Crawford for their contribution.

  - Fix for Bug#97724 (30570721), Contribution: Allow \'3.\' formatted numbers.
    Thanks to Nick Pollett for his contribution.

  - Fix for Bug#98536 (30877755), SIMPLEDATEFORMAT COULD CACHE A WRONG CALENDAR.

  - Fix for Bug#91112 (28125069), AGAIN WRONG JAVA.SQL.DATE.

  - Fix for Bug#30474158, CONNECTOR/J 8 DOES NOT HONOR THE REQUESTED RESULTSETTYPE SCROLL_INSENSITIVE ETC.

  - Fix for Bug#98445 (30832513), Connection option clientInfoProvider=ClientInfoProviderSP causes NPE.

  - WL#12248, DevAPI: Connection compression.

  - Fix for Bug#30636056, ResultSetUtil.resultSetToMap() can be unsafe to use.

  - Fix for Bug#97757 (30584907), NULLPOINTEREXCEPTION WITH CACHERESULTSETMETADATA=TRUE AND EXECUTEQUERY OF "SET".

Version 8.0.19

  - WL#13346, Support for mult-host and failover.

  - Fix for Bug#97413 (30477722), DATABASEMETADATA IS BROKEN AFTER SERVER WL#13528.

  - WL#13367, DNS SRV support.

  - WL#12736, DevAPI: Specify TLS ciphers to be used by a client or session.

  - Fix for regression tests broken by Bug#97079 fix.

  - Fix for Bug#96383 (30119545) RS.GETTIMESTAMP() HAS DIFFERENT RESULTS FOR TIME FIELDS WITH USECURSORFETCH=TRUE.

  - Fix for Bug#96059 (29999318), ERROR STREAMING MULTI RESULTSETS WITH MYSQL-CONNECTOR-JAVA 8.0.X.

  - Fix for Bug#96442 (30151808), INCORRECT DATE ERROR WHEN CALLING GETMETADATA ON PREPARED STATEMENT.

Version 8.0.18

  - WL#13347, Connectors should handle expired password sandbox without SET operations.
