@@ -10890,4 +10890,60 @@ public class StatementRegressionTest extends BaseTestCase {
         } while (useServerPrepStmts = !useServerPrepStmts);
     }
 
+    /**
+     * Tests fix for Bug#98237 (30911870), PREPAREDSTATEMENT.SETOBJECT(I, "FALSE", TYPES.BOOLEAN) ALWAYS SETS TRUE OR 1.
+     */
+    public void testBug98237() throws Exception {
+        createTable("testBug98237", "(b tinyint)");
+
+        String[] falses = new String[] { "False", "n", "0", "-0", "0.00", "-0.0" };
+        String[] trues = new String[] { "true", "y", "1", "-1", "1.0", "-1.0", "0.01", "-0.01" };
+
+        Properties props = new Properties();
+        boolean useSPS = false;
+        do {
+            props.setProperty(PropertyKey.useServerPrepStmts.getKeyName(), Boolean.toString(useSPS));
+            Connection con = getConnectionWithProps(props);
+            try {
+                PreparedStatement ps = con.prepareStatement("insert into testBug98237 values(?)");
+                Statement st = con.createStatement();
+
+                con.createStatement().execute("truncate table testBug98237");
+                for (String val : falses) {
+                    ps.clearParameters();
+                    ps.setObject(1, val, Types.BOOLEAN);
+                    ps.execute();
+                }
+                this.rs = st.executeQuery("select * from testBug98237");
+                for (String val : falses) {
+                    assertTrue(this.rs.next());
+                    assertEquals("'false' was expected for " + val, 0, this.rs.getInt(1));
+                }
+
+                con.createStatement().execute("truncate table testBug98237");
+                for (String val : trues) {
+                    ps.clearParameters();
+                    ps.setObject(1, val, Types.BOOLEAN);
+                    ps.execute();
+                }
+                this.rs = st.executeQuery("select * from testBug98237");
+                for (String val : trues) {
+                    assertTrue(this.rs.next());
+                    assertEquals("'true' was expected for " + val, 1, this.rs.getInt(1));
+                }
+
+                ps.clearParameters();
+                assertThrows(SQLException.class, ".+ No conversion from abc to Types.BOOLEAN possible.+", new Callable<Void>() {
+                    public Void call() throws Exception {
+                        ps.setObject(1, "abc", Types.BOOLEAN);
+                        return null;
+                    }
+                });
+
+            } finally {
+                con.close();
+            }
+        } while (useSPS = !useSPS);
+
+    }
 }
